--- a/manifest.json
+++ b/manifest.json
@@ -16,11 +16,14 @@
     "default_popup": "popup.html",
     "default_icon": {
       "16": "images/icon16.png",
-      "48": "images/icon48.png",
+      "64": "images/icon64.png",
       "128": "images/icon128.png"
-    },
-    "default_popup_width": 400,
-    "default_popup_height": 600 
+    }
+  },
+  "icons": {
+    "16": "images/icon16.png",
+    "64": "images/icon64.png",
+    "128": "images/icon128.png"
   },
   "background": {
     "service_worker": "background.js"
